# worktree-gc

./: Cargo.toml  LICENSE  README.md  STORAGE.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/rfcs/: 0001-rebuildable-state-controller.md
src/: activity_age.rs  bambu.rs  cargo_incremental.rs  cargo_profile_collect.rs  cargo_profiles.rs  chromium_components.rs  codex.rs  codex_sessions.rs  config.rs  docker.rs  exact_generated.rs  gateway_storage.rs  generated.rs  github_pr.rs  inventory.rs  lib.rs  lima.rs  macos_open_handles.rs  main.rs  parallels.rs  pnpm.rs  protection.rs  survey.rs
tests/: cargo_profile_collect.rs
