[package]
name = "worktree-gc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = { version = "0.3.37", features = ["formatting"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.15.0"
