[package]
name = "worktree-gc"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Triage and clean stale Git worktrees"
repository = "https://github.com/wycats/worktree-gc"
readme = "README.md"
license = "MIT"
keywords = ["git", "worktree", "cleanup", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.'cfg(windows)']
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.95"
cargo_metadata = "0.23.1"
clap = { version = "4.5.28", features = ["derive"] }
parse-size = "1.1.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = { version = "0.3.37", features = ["formatting"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.15.0"
